--- a/pom.xml
+++ b/pom.xml
@@ -63,10 +63,10 @@
       <artifactId>druid-spring-boot-3-starter</artifactId>
       <version>${druid.version}</version>
     </dependency>
-    <!--    <dependency>-->
-    <!--      <groupId>org.springframework.boot</groupId>-->
-    <!--      <artifactId>spring-boot-starter-amqp</artifactId>-->
-    <!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-amqp</artifactId>
+    </dependency>
     <!--    <dependency>-->
     <!--      <groupId>org.springframework.boot</groupId>-->
     <!--      <artifactId>spring-boot-starter-data-elasticsearch</artifactId>-->
@@ -182,11 +182,11 @@
       <groupId>org.thymeleaf.extras</groupId>
       <artifactId>thymeleaf-extras-springsecurity6</artifactId>
     </dependency>
-    <!--    <dependency>-->
-    <!--      <groupId>org.springframework.amqp</groupId>-->
-    <!--      <artifactId>spring-rabbit-test</artifactId>-->
-    <!--      <scope>test</scope>-->
-    <!--    </dependency>-->
+    <dependency>
+      <groupId>org.springframework.amqp</groupId>
+      <artifactId>spring-rabbit-test</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-test</artifactId>
