--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -75,7 +75,7 @@ spring:
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
   global-config:
     db-config:
@@ -108,7 +108,7 @@ jwt:
   # 为JWT基础信息加密和解密的密钥，长度需要大于等于43
   secret: oQZSeguYloAPAmKwvKqqnifiQatxMEPNOvtwPsCLasd
   # JWT令牌的有效时间，单位秒，默认2周
-  expiration: 7200
+  expiration: 72000
 
 # knife4j的增强配置，不需要增强可以不配
 springdoc:
@@ -117,6 +117,8 @@ springdoc:
     # 是否开启接口文档
     enabled: true
   swagger-ui:
+    # 默认的接口文档地址
+    path: /swagger-ui.html
     # 持久化认证数据，如果设置为 true，它会保留授权数据并且不会在浏览器关闭/刷新时丢失
     persistAuthorization: true
 
